--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Glitch animation</title>
-    <link rel="stylesheet" href="./css/scss/style.css" />
+    <title>Glitch random images</title>
+    <link rel="stylesheet" href="./dist/css/style.css" />
   </head>
   <body>
     <article class="ap-post ap-post--random-images" data-article-year="2023">
@@ -278,6 +278,6 @@
         </div>
       </section>
     </article>
-    <script src="./script.js"></script>
+    <script src="./dist/js/script.js"></script>
   </body>
 </html>
