--- a/workspaces/glitch-random-images/index.html
+++ b/workspaces/glitch-random-images/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glitch random images</title>
-    <link rel="stylesheet" href="./dist/css/style.css" />
+    <link rel="stylesheet" href="./css/scss/css/style.css" />
   </head>
   <body>
     <article class="ap-post ap-post--random-images" data-article-year="2023">
@@ -278,6 +278,6 @@
         </div>
       </section>
     </article>
-    <script src="./dist/js/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
