--- a/workspaces/glitch-random-images/index.html
+++ b/workspaces/glitch-random-images/index.html
@@ -265,7 +265,7 @@
                 <div class="glitch__img"></div>
               </div>
             </div>
-            <div class="text-wrap">
+            <!-- <div class="text-wrap">
               <div class="ap-image">
                 <img
                   src="https://www.hera.com/kr/ko/resource/image/library/2023/rouge_classy_story_seoul_red_banner_pc_kr_231220.jpg"
@@ -273,7 +273,7 @@
                 />
               </div>
               <p class="ap-section__title">ROUGE CLASSY SEOUL RED</p>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
