--- a/rsp-game/rsp-game-score.html
+++ b/rsp-game/rsp-game-score.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>가위바위보 게임</title>
 
     <style>
-        #computer {
-            width: 142px;
-            height: 200px;
-        }
+      #computer {
+        width: 142px;
+        height: 200px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="computer"></div>
     <div class="rsp-wrap">
-        <button id="scissors" class="btn">가위</button>
-        <button id="rock" class="btn">바위</button>
-        <button id="paper" class="btn">보</button>
+      <button id="scissors" class="btn">가위</button>
+      <button id="rock" class="btn">바위</button>
+      <button id="paper" class="btn">보</button>
     </div>
-    <div id="score">0</div>  
-</body>
+    <div id="score">0</div>
+  </body>
 </html>
 
 <script>
-    const $computer = document.querySelector("#computer");
-    const $score = document.querySelector("#score");
-    const $rock = document.querySelector("#rock");
-    const $scissors = document.querySelector("#scissors");
-    const $paper = document.querySelector("#paper");
-    const IMG_URL = './img/rsp.png';
-    $computer.style.background = `url(${IMG_URL}) -464px 0`;
-    $computer.style.backgroundSize = 'auto 200px';
+  const $computer = document.querySelector("#computer");
+  const $score = document.querySelector("#score");
+  const $rock = document.querySelector("#rock");
+  const $scissors = document.querySelector("#scissors");
+  const $paper = document.querySelector("#paper");
+  const IMG_URL = "https://i.postimg.cc/7PM3vTRh/rsp.png";
+  $computer.style.background = `url(${IMG_URL}) -440px 0`;
+  $computer.style.backgroundSize = "auto 200px";
 
-    const rspX = {
-    scissors: '0', // 가위
-    rock: '-220px', // 바위
-    paper: '-440px', // 보
-    };
+  const rspX = {
+    scissors: "0", // 가위
+    rock: "-220px", // 바위
+    paper: "-440px", // 보
+  };
 
-    let computerChoice = 'scissors';
+  let computerChoice = "scissors";
   const changeComputerHand = () => {
-    if (computerChoice === 'rock') { // 바위면
-      computerChoice = 'scissors';
-    } else if (computerChoice === 'scissors') { // 가위면
-      computerChoice = 'paper';
-    } else if (computerChoice === 'paper') { // 보면
-      computerChoice = 'rock';
+    if (computerChoice === "rock") {
+      // 바위면
+      computerChoice = "scissors";
+    } else if (computerChoice === "scissors") {
+      // 가위면
+      computerChoice = "paper";
+    } else if (computerChoice === "paper") {
+      // 보면
+      computerChoice = "rock";
     }
     $computer.style.background = `url(${IMG_URL}) ${rspX[computerChoice]} 0`;
-    $computer.style.backgroundSize = 'auto 200px';
-  }
-  let intervalId = setInterval(changeComputerHand, 1000);
+    $computer.style.backgroundSize = "auto 200px";
+  };
+  let intervalId = setInterval(changeComputerHand, 100);
 
   const scoreTable = {
     rock: 0,
@@ -69,11 +72,12 @@
       clearInterval(intervalId);
       clickable = false;
       // 점수 계산 및 화면 표시
-      const myChoice = event.target.textContent === '바위' 
-        ? 'rock' 
-        : event.target.textContent === '가위' 
-          ? 'scissors' 
-          : 'paper';
+      const myChoice =
+        event.target.textContent === "바위"
+          ? "rock"
+          : event.target.textContent === "가위"
+          ? "scissors"
+          : "paper";
       const myScore = scoreTable[myChoice];
       const computerScore = scoreTable[computerChoice];
       const diff = myScore - computerScore;
@@ -82,22 +86,22 @@
       // 2, -1은 승리조건이고, -2, 1은 패배조건, 점수표 참고
       if ([2, -1].includes(diff)) {
         score += 1;
-        message = '승리';
+        message = "승리";
       } else if ([-2, 1].includes(diff)) {
         score -= 1;
-        message = '패배';
+        message = "패배";
       } else {
-        message = '무승부';
+        message = "무승부";
       }
       $score.textContent = `${message} 총: ${score}점`;
       setTimeout(() => {
         clickable = true;
-        intervalId = setInterval(changeComputerHand, 1000);
+        intervalId = setInterval(changeComputerHand, 100);
       }, 1000);
     }
-  }; 
+  };
 
-  $rock.addEventListener('click', clickButton);
-  $scissors.addEventListener('click', clickButton);
-  $paper.addEventListener('click', clickButton);
+  $rock.addEventListener("click", clickButton);
+  $scissors.addEventListener("click", clickButton);
+  $paper.addEventListener("click", clickButton);
 </script>
