--- a/appleClone/apple-clone-v11/blank.html
+++ b/appleClone/apple-clone-v11/blank.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <nav class="global-nav">
-        <div class="global-nav__link">
+        <div class="global-nav__links">
           <a href="#" class="global-nav__item">Rooms</a>
           <a href="#" class="global-nav__item">Ideas</a>
           <a href="#" class="global-nav__item">Stores</a>
@@ -30,6 +30,103 @@
           <a href="local-nav__items">구입하기</a>
         </div>
       </nav>
+      <section class="scroll-section" id="scroll-section-0">
+        <h1>Airmug Pro</h1>
+        <div class="sticky-elem main-message">
+          <p>
+            온진히 빠져들게 하는<br />
+            최고급 세라믹
+          </p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>
+            주변 맛을 느끼게 해주는<br />
+            주변 맛 허용 모드
+          </p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>
+            온종일 편안한<br />
+            맞춤형 손잡이
+          </p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>
+            새롭게 입가를<br />
+            찾아온 매혹
+          </p>
+        </div>
+      </section>
+      <section class="scroll-section" id="scroll-section-1">
+        <p class="description">
+          <strong>보통 스크롤 영역</strong>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam omnis
+          quisquam quae consequatur amet nesciunt, quam repellendus animi quis
+          rem explicabo illum beatae vitae distinctio sequi hic dicta dolores
+          praesentium architecto natus. Eaque debitis, quae ducimus sunt rerum
+          vero illo voluptatibus commodi facilis earum ad eligendi perspiciatis
+          ipsa tenetur nisi! Quas molestias adipisci repellat explicabo. Ab ipsa
+          facilis explicabo, hic beatae id vero suscipit deleniti aperiam nobis
+          possimus autem, vel excepturi fugit necessitatibus illo. Veritatis,
+          iusto culpa asperiores ullam corporis quas quia harum iste quasi saepe
+          architecto sed excepturi tempore quod quam. Saepe, cumque quod,
+          consequatur ea nihil facilis, voluptates pariatur velit nesciunt
+          deleniti sapiente est provident eos odio sequi. Nesciunt adipisci
+          maxime expedita nemo cum dicta aperiam eos odio, labore at pariatur
+          consequatur, ad dignissimos in illum libero laborum enim. Deleniti
+          veniam, voluptatum dolore esse doloribus ipsam unde, ratione eligendi
+          mollitia eum ipsum at. Delectus placeat quidem vitae numquam,
+          voluptate aliquid corrupti, totam aut voluptatum natus commodi tempore
+          a blanditiis optio earum possimus et voluptates ullam eos doloribus
+          quos enim accusantium. Ipsam hic iste corrupti, perspiciatis adipisci
+          ullam iure optio saepe, itaque asperiores tempora ducimus officia
+          quis, rerum vel. Blanditiis tempore reiciendis vero ducimus ullam quos
+          possimus voluptatibus maxime.
+        </p>
+      </section>
+      <section class="scroll-section" id="scroll-section-2">
+        <div class="sticky-elem main-message">
+          <p>
+            <small>편안한 촉감</small>
+            입과 하나 되다
+          </p>
+        </div>
+        <div class="sticky-elem desc-message">
+          <p>
+            편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를
+            하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그,
+            AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고
+            오롯이 당신과 음료만 남게 되죠.
+          </p>
+          <div class="pin"></div>
+        </div>
+        <div class="sticky-elem desc-message">
+          <p>디자인 앤 퀄리티 오브 스웨덴,<br />메이드 인 차이나</p>
+          <div class="pin"></div>
+        </div>
+      </section>
+      <section class="scroll-section" id="scroll-section-3">
+        <p class="mid-message">
+          <strong>Retina 머그</strong><br />
+          아이디어를 광활하게 펼칠<br />
+          아름답고 부드러운 음료 공간.
+        </p>
+        <p class="canvas-caption">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus fuga
+          totam blanditiis commodi magni. Quis consequatur cumque rerum eligendi
+          ratione aliquid labore libero molestiae provident delectus veniam quam
+          exercitationem blanditiis, iure autem perspiciatis. Soluta iste fuga
+          quo nulla dolores eius ipsa quidem molestias sequi facilis, commodi
+          dignissimos nihil non similique cumque modi illum doloribus magni
+          tenetur, numquam aperiam! Asperiores, nostrum rerum porro deserunt in
+          repudiandae ducimus pariatur reprehenderit optio molestiae, alias sed
+          error doloremque quos iste voluptatibus voluptates beatae illo itaque,
+          amet dolorum iusto exercitationem. Perspiciatis ad deleniti autem
+          fugit obcaecati, incidunt eum sed natus cupiditate minima quae rem
+          odio?
+        </p>
+      </section>
+      <footer class="footer">2024, JOY HWANG</footer>
     </div>
   </body>
 </html>
