--- a/appleClone/apple-clone-v11/blank.html
+++ b/appleClone/apple-clone-v11/blank.html
@@ -128,5 +128,6 @@
       </section>
       <footer class="footer">2024, JOY HWANG</footer>
     </div>
+    <script src="js/blank.js"></script>
   </body>
 </html>
